2001-10-10  Mark McLoughlin <mark@skynet.ie>

	* extern.h, extern.c (extern_ref, extern_unref, 
	  extern_clean): privatise.
	  (extern_set_info, extern_(get|set)_orient, ): kill.
	  (extern_handle_*): impl. Privatise the handling of
	this stuff.
	  (socket_set_loading): remove ifdef FIXMEs and port
	usage of gdk_pixbuf_new_from_file.

	* applet.c (applet_callback_callback):
	  panel.c (freeze_changes, thaw_changes, size_change,
	  orientation_change, back_change):
	  session.c (send_tooltips_state):

2001-10-09  Mark McLoughlin <mark@skynet.ie>

	* panel-include.h: remove.

	* *.c, *.h: don't include panel-include.h. Include the
	actual required headers. Give automatic dependancy
	generation a chance.

	* aligned-widget.c (aligned_pos_class_init): use proper
	enum def instead of GTK_TYPE_ENUM.
	  basep-widget.c (basep_widget_class_init): ditto.
	  border-widget.c (border_pos_class_init): ditto.
	  panel-widget.c (panel_widget_class_init): ditto.
	  sliding-widget.c (sliding_pos_class_init): ditto.

	* Makefile.am: only generate the enums we actually
	want. Also don't include panel-include.h from
	panel-typebuiltins.c - include the required headers.

2001-10-08  Mark McLoughlin <mark@skynet.ie>

	* extern.c: privatised the Extern struct. Implemented
	various set/get methods.

	* applet.c, panel.c, session.c: updated for above change.

2001-10-08  Mark McLoughlin <mark@skynet.ie>

	* applet.c (show_applet_menu): get popup menu working.
	  panel.c (panel_event): ditto.
	  menu.c (menu_button_pressed): ditto.

	* menu.c (create_menu_at_fr): fix core dump.
	(make_add_submenu): ditto.

	* menu-util.h, menu-util.c (applet_menu_position): add
	new push_in param for gtk_menu_popup callbacks.
	(panel_menu_position): ditto.
	(get_default_menu_flags): make not const - it calls a
	non-const function.
	
2001-10-08  Mark McLoughlin <mark@skynet.ie>

	* menu.c (create_applets_menu): warn if we can't find applets
	menu directory.