@@ -1,3 +1,9 @@
+2001-10-10  Alex Larsson  <alexl@redhat.com>
+
+	* menu.c (add_drawers_from_dir):
+	converted to use gnome-desktop-item, and removed
+	#ifdef FIXME
+
 2001-10-10  Mark McLoughlin <mark@skynet.ie>
 
 	* extern.h, extern.c (extern_ref, extern_unref, 
